--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div class="box" id="block-8"></div>
         <div class="box" id="block-9"></div>
         <div id="scoreboard-container">
+            <h2>Placar:</h2>
             <span class="score-box">
                 <span id="x-scoreboard">x</span>:
                 <span id="scoreboard-1">0</span>
@@ -41,7 +42,7 @@
         <div class="o"></div>
     </div>
     <div id="message" class="hide">
-        <p></p>
+        <p>asd</p>
     </div>
     <script src="js/scripts.js"></script>
 </body>
